# Trans_Clone

./: INSTALLATION.md  Nukitashi1.csvtproj  OPTIMIZATION_CHANGELOG.md  history_DeliRepe.json  history_Nukitashi1.json  main.py  prompt.txt  pyproject.toml  requirements.txt
config/: settings.py
core/: api_service_manager.py  autosave_manager.py  context_manager.py  file_manager.py  history_manager.py  preferences.py  project_manager.py  translation_engine.py
models/: api_models.py  data_structures.py  table_model.py
modules/csv_parser/: base_parser.py  default_parser.py  regex_parser.py
ui/: dialogs.py  enhanced_table_widget.py  main_window.py  main_window_backup.py
ui/components/: action_panel.py  api_config_panel.py  config_panel.py  instruction_panel.py  summary_panel.py
utils/: file_utils.py
