[project]
name = "tool-trans-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "cryptography>=41.0.0",
    "google-generativeai>=0.3.0",
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.55",
    "pandas>=1.3.0",
    "pyqt6>=6.4.0",
    "python-dotenv>=0.19.0",
    "requests>=2.31.0",
    "typing-extensions>=4.0.0",
]
